--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
     <div id="dendro"></div>
     <div id="circles"></div>
     <div id="jTree"></div>
+    <div id="religion"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
